feat: add adminHandler and authHandler comment and api document
