# docs/swagger.yaml
@@ -1,5 +1,21 @@
 basePath: /api/v1
 definitions:
+  handlers.AdminRequest:
+    properties:
+      email:
+        type: string
+      name:
+        type: string
+      password:
+        type: string
+      username:
+        type: string
+    required:
+    - email
+    - name
+    - password
+    - username
+    type: object
   handlers.BankAccountRequest:
     properties:
       sheba:
@@ -17,6 +33,13 @@ definitions:
         type: string
       status:
         type: string
+    type: object
+  handlers.CommissionRequest:
+    properties:
+      amount_per_transaction:
+        type: number
+      percent_per_transaction:
+        type: number
     type: object
   handlers.CommissionResponse:
     properties:
@@ -67,10 +90,10 @@ definitions:
     type: object
   handlers.GatewayResponse:
     properties:
-      bank_account_id:
-        type: integer
-      commission_id:
-        type: integer
+      bank_account:
+        $ref: '#/definitions/handlers.BankAccountResponse'
+      commission:
+        $ref: '#/definitions/handlers.CommissionResponse'
       logo:
         type: string
       name:
@@ -83,6 +106,20 @@ definitions:
         type: string
       user_id:
         type: integer
+    type: object
+  handlers.LoginReq:
+    properties:
+      email:
+        type: string
+      password:
+        type: string
+      phone_number:
+        type: string
+    type: object
+  handlers.LoginRes:
+    properties:
+      token:
+        type: string
     type: object
   handlers.PaymentTransactionRequest:
     properties:
@@ -155,6 +192,11 @@ definitions:
       status:
         type: string
     type: object
+  handlers.StatusRequest:
+    properties:
+      status:
+        type: string
+    type: object
   handlers.TransactionResponse:
     properties:
       payment_amount:
@@ -188,6 +230,23 @@ definitions:
       name:
         type: string
     type: object
+  handlers.UserResponse:
+    properties:
+      address:
+        type: string
+      email:
+        type: string
+      identity:
+        type: string
+      name:
+        type: string
+      phone_number:
+        type: string
+      role:
+        type: string
+      username:
+        type: string
+    type: object
   handlers.VerifyTransactionRequest:
     properties:
       tracking_code:
@@ -199,6 +258,392 @@ info:
   title: Qpay API
   version: "1.0"
 paths:
+  /admin/commission:
+    get:
+      consumes:
+      - application/json
+      description: Retrieve a list of all commissions.
+      produces:
+      - application/json
+      responses:
+        "200":
+          description: List of commissions
+          schema:
+            items:
+              $ref: '#/definitions/handlers.CommissionResponse'
+            type: array
+        "500":
+          description: '{"status": "error", "message": "Internal server error in getting
+            commissions"}'
+          schema:
+            $ref: '#/definitions/handlers.Response'
+      security:
+      - ApiKeyAuth: []
+      summary: List all commissions
+      tags:
+      - admin
+    post:
+      consumes:
+      - application/json
+      description: Create a new commission with the provided details.
+      parameters:
+      - description: Commission details
+        in: body
+        name: commissionRequest
+        required: true
+        schema:
+          $ref: '#/definitions/handlers.CommissionRequest'
+      produces:
+      - application/json
+      responses:
+        "201":
+          description: Created commission details
+          schema:
+            $ref: '#/definitions/handlers.CommissionResponse'
+        "400":
+          description: '{"status": "error", "message": "Bind Error"}'
+          schema:
+            $ref: '#/definitions/handlers.Response'
+        "500":
+          description: '{"status": "error", "message": "Internal server error in creating
+            commission"}'
+          schema:
+            $ref: '#/definitions/handlers.Response'
+      security:
+      - ApiKeyAuth: []
+      summary: Create a new commission
+      tags:
+      - admin
+  /admin/commission/{id}:
+    get:
+      consumes:
+      - application/json
+      description: Retrieve details of a specific commission by its ID.
+      parameters:
+      - description: Commission ID
+        in: path
+        name: id
+        required: true
+        type: integer
+      produces:
+      - application/json
+      responses:
+        "200":
+          description: Commission details
+          schema:
+            $ref: '#/definitions/handlers.CommissionResponse'
+        "404":
+          description: '{"status": "error", "message": "Commission not found!"}'
+          schema:
+            $ref: '#/definitions/handlers.Response'
+      security:
+      - ApiKeyAuth: []
+      summary: Get commission by ID
+      tags:
+      - admin
+  /admin/gateway:
+    get:
+      consumes:
+      - application/json
+      description: Retrieve a list of all gateways.
+      produces:
+      - application/json
+      responses:
+        "200":
+          description: List of gateways
+          schema:
+            items:
+              $ref: '#/definitions/handlers.GatewayResponse'
+            type: array
+        "500":
+          description: '{"status": "error", "message": "Internal server error in getting
+            gateways"}'
+          schema:
+            $ref: '#/definitions/handlers.Response'
+      security:
+      - ApiKeyAuth: []
+      summary: List all gateways
+      tags:
+      - admin
+  /admin/gateway/{id}:
+    get:
+      consumes:
+      - application/json
+      description: Retrieve details of a specific gateway by its ID.
+      parameters:
+      - description: Gateway ID
+        in: path
+        name: id
+        required: true
+        type: integer
+      produces:
+      - application/json
+      responses:
+        "200":
+          description: Gateway details
+          schema:
+            $ref: '#/definitions/handlers.GatewayResponse'
+        "404":
+          description: '{"status": "error", "message": "Gateway not found!"}'
+          schema:
+            $ref: '#/definitions/handlers.Response'
+      security:
+      - ApiKeyAuth: []
+      summary: Get gateway by ID
+      tags:
+      - admin
+    patch:
+      consumes:
+      - application/json
+      description: Update the status of a specific gateway by its ID.
+      parameters:
+      - description: Gateway ID
+        in: path
+        name: id
+        required: true
+        type: integer
+      - description: Updated status details
+        in: body
+        name: updateRequest
+        required: true
+        schema:
+          $ref: '#/definitions/handlers.StatusRequest'
+      produces:
+      - application/json
+      responses:
+        "200":
+          description: Updated gateway details
+          schema:
+            $ref: '#/definitions/handlers.GatewayResponse'
+        "400":
+          description: '{"status": "error", "message": "Status field is unsupported"}'
+          schema:
+            $ref: '#/definitions/handlers.Response'
+        "500":
+          description: '{"status": "error", "message": "Internal server error"}'
+          schema:
+            $ref: '#/definitions/handlers.Response'
+      security:
+      - ApiKeyAuth: []
+      summary: Update gateway status by ID
+      tags:
+      - admin
+  /admin/register:
+    post:
+      consumes:
+      - application/json
+      description: Register a new admin with the provided details.
+      parameters:
+      - description: Admin details
+        in: body
+        name: adminRequest
+        required: true
+        schema:
+          $ref: '#/definitions/handlers.AdminRequest'
+      produces:
+      - application/json
+      responses:
+        "201":
+          description: Success message
+          schema:
+            $ref: '#/definitions/handlers.Response'
+        "400":
+          description: '{"status": "error", "message": "Bind Error"}'
+          schema:
+            $ref: '#/definitions/handlers.Response'
+        "403":
+          description: '{"status": "error", "message": "Invalid admin details"}'
+          schema:
+            $ref: '#/definitions/handlers.Response'
+        "409":
+          description: '{"status": "error", "message": "Username or email already
+            exists"}'
+          schema:
+            $ref: '#/definitions/handlers.Response'
+        "500":
+          description: '{"status": "error", "message": "Internal server error in create
+            admin"}'
+          schema:
+            $ref: '#/definitions/handlers.Response'
+      security:
+      - ApiKeyAuth: []
+      summary: Create a new admin
+      tags:
+      - admin
+  /admin/transaction:
+    get:
+      consumes:
+      - application/json
+      description: Retrieve a list of all transactions.
+      produces:
+      - application/json
+      responses:
+        "200":
+          description: List of transactions
+          schema:
+            items:
+              $ref: '#/definitions/handlers.TransactionResponse'
+            type: array
+        "500":
+          description: '{"status": "error", "message": "Internal server error in getting
+            transactions"}'
+          schema:
+            $ref: '#/definitions/handlers.Response'
+      security:
+      - ApiKeyAuth: []
+      summary: List all transactions
+      tags:
+      - admin
+  /admin/transaction/{id}:
+    get:
+      consumes:
+      - application/json
+      description: Retrieve details of a specific transaction by its ID.
+      parameters:
+      - description: Transaction ID
+        in: path
+        name: id
+        required: true
+        type: integer
+      produces:
+      - application/json
+      responses:
+        "200":
+          description: Transaction details
+          schema:
+            $ref: '#/definitions/handlers.TransactionResponse'
+        "404":
+          description: '{"status": "error", "message": "Transaction not found!"}'
+          schema:
+            $ref: '#/definitions/handlers.Response'
+      security:
+      - ApiKeyAuth: []
+      summary: Get transaction by ID
+      tags:
+      - admin
+    patch:
+      consumes:
+      - application/json
+      description: Update the status of a specific transaction by its ID.
+      parameters:
+      - description: Transaction ID
+        in: path
+        name: id
+        required: true
+        type: integer
+      - description: Updated status details
+        in: body
+        name: updateRequest
+        required: true
+        schema:
+          $ref: '#/definitions/handlers.StatusRequest'
+      produces:
+      - application/json
+      responses:
+        "200":
+          description: Updated transaction details
+          schema:
+            $ref: '#/definitions/handlers.TransactionResponse'
+        "400":
+          description: '{"status": "error", "message": "Status field is unsupported"}'
+          schema:
+            $ref: '#/definitions/handlers.Response'
+        "500":
+          description: '{"status": "error", "message": "Internal server error"}'
+          schema:
+            $ref: '#/definitions/handlers.Response'
+      security:
+      - ApiKeyAuth: []
+      summary: Update transaction status by ID
+      tags:
+      - admin
+  /admin/user:
+    get:
+      consumes:
+      - application/json
+      description: Retrieve a list of all users.
+      produces:
+      - application/json
+      responses:
+        "200":
+          description: List of users
+          schema:
+            items:
+              $ref: '#/definitions/handlers.UserResponse'
+            type: array
+        "500":
+          description: '{"status": "error", "message": "Internal server error in getting
+            users"}'
+          schema:
+            $ref: '#/definitions/handlers.Response'
+      security:
+      - ApiKeyAuth: []
+      summary: List all users
+      tags:
+      - admin
+  /admin/user/{id}:
+    get:
+      consumes:
+      - application/json
+      description: Retrieve details of a specific user by its ID.
+      parameters:
+      - description: User ID
+        in: path
+        name: id
+        required: true
+        type: integer
+      produces:
+      - application/json
+      responses:
+        "200":
+          description: User details
+          schema:
+            $ref: '#/definitions/handlers.UserResponse'
+        "404":
+          description: '{"status": "error", "message": "User not found!"}'
+          schema:
+            $ref: '#/definitions/handlers.Response'
+      security:
+      - ApiKeyAuth: []
+      summary: Get user by ID
+      tags:
+      - admin
+    patch:
+      consumes:
+      - application/json
+      description: Update the status of a specific user by its ID.
+      parameters:
+      - description: User ID
+        in: path
+        name: id
+        required: true
+        type: integer
+      - description: Updated status details
+        in: body
+        name: updateRequest
+        required: true
+        schema:
+          $ref: '#/definitions/handlers.StatusRequest'
+      produces:
+      - application/json
+      responses:
+        "200":
+          description: Success message
+          schema:
+            $ref: '#/definitions/handlers.Response'
+        "400":
+          description: '{"status": "error", "message": "Status field is unsupported"}'
+          schema:
+            $ref: '#/definitions/handlers.Response'
+        "500":
+          description: '{"status": "error", "message": "Internal server error"}'
+          schema:
+            $ref: '#/definitions/handlers.Response'
+      security:
+      - ApiKeyAuth: []
+      summary: Update user status by ID
+      tags:
+      - admin
   /bankaccount:
     get:
       consumes:
@@ -513,6 +958,34 @@ paths:
       summary: List all active commissions
       tags:
       - gateways
+  /login:
+    post:
+      consumes:
+      - application/json
+      description: Log in a user using email/phone and password.
+      parameters:
+      - description: Login details
+        in: body
+        name: loginRequest
+        required: true
+        schema:
+          $ref: '#/definitions/handlers.LoginReq'
+      produces:
+      - application/json
+      responses:
+        "200":
+          description: Login successful, returns JWT token
+          schema:
+            $ref: '#/definitions/handlers.LoginRes'
+        "400":
+          description: '{"message": "Bad request"}'
+          schema:
+            $ref: '#/definitions/handlers.Response'
+      security:
+      - ApiKeyAuth: []
+      summary: User login
+      tags:
+      - auth
   /register:
     post:
       consumes:
